[package]
name = "foro-tombi"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/nahco314/foro-tombi"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.87"
tombi-lexer = { git = "https://github.com/nahco314/tombi/", branch = "raw_schema" }
tombi-formatter = { git = "https://github.com/nahco314/tombi/", branch = "raw_schema" }
tombi-schema-store = { git = "https://github.com/nahco314/tombi/", branch = "raw_schema" }
tombi-diagnostic = { git = "https://github.com/nahco314/tombi/", branch = "raw_schema" }
tombi-config = { git = "https://github.com/nahco314/tombi/", branch = "raw_schema" }
serde_tombi = { git = "https://github.com/nahco314/tombi/", branch = "raw_schema" }
foro-plugin-utils = { git = "https://github.com/nahco314/foro-plugin-utils", version = "0.2.1" }
serde_json = "1.0.128"
smol = "2.0.2"
glob = "0.3.2"
either = "1.15.0"
nu-ansi-term = "0.50.1"
serde = "1.0.219"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"

[build-dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.128"
# panic = "abort"
