[package]
name = "foro-tombi"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/nahco314/foro-tombi"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.87"
bytes = "1.10.1"
either = "1.15.0"
foro-plugin-utils = { version = "0.2.1", git = "https://github.com/nahco314/foro-plugin-utils" }
glob = "0.3.2"
nu-ansi-term = "0.50.1"
serde = "1.0.219"
serde_json = "1.0.128"
serde_tombi = { branch = "wasm", git = "https://github.com/nahco314/tombi/" }
smol = "2.0.2"
surf = "2.3.2"
tombi-config = { branch = "wasm", git = "https://github.com/nahco314/tombi/" }
tombi-diagnostic = { branch = "wasm", git = "https://github.com/nahco314/tombi/" }
tombi-formatter = { branch = "wasm", git = "https://github.com/nahco314/tombi/" }
tombi-lexer = { branch = "wasm", git = "https://github.com/nahco314/tombi/" }
tombi-schema-store = { branch = "wasm", git = "https://github.com/nahco314/tombi/" }

[build-dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.128"
# panic = "abort"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
